--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Thuong Mai University</h3>
+                            <h3 class="mb-0 text-primary">Thuong Mai University</h3>
                             <div class="subheading mb-3">Management information system</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2020 - Present</span></div>
@@ -99,7 +99,7 @@
                     <h2 class="mb-5">Personal Project</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">E-commerce Website for Clothes</h3>
+                            <h3 class="mb-0 text-primary">E-commerce Website for Clothes</h3>
                             <div class="subheading-project mb-3">Developed an e-commerce website for browsing and purchasing clothes, managing information such as revenue, products, and orders.</div>
                             <ul>
                                 <li>Github: <a href="https://github.com/nhhuynhpc/Website_selling_clothes" target="_blank">Code on Github</a></li>
@@ -126,7 +126,7 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <div class="subheading mb-3 text-primary">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
@@ -136,7 +136,7 @@
                         <li class="list-inline-item"><i class="fab fa-sass"></i></li>
                         <li class="list-inline-item"><i class="fa-brands fa-bootstrap"></i></li>
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3 text-primary">Workflow</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
