commit change title

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </h1>
                     <div class="subheading mb-3">
                         <p><img src="./assets/icon/personal-information.png" alt="">
-                            front-end Intern
+                            Web Developer Intern
                         </p>
                         <p><img src="./assets/icon/contact-mail.png" alt="">
                             0398561475 ·
